Fixed CSS bleed issue by name-spacing scss file
I REPEAT - scss files need to be namespaced to a particular component or
you risk styling bleeding into other components.  Don't use element
types, i.e. TABLE or UL or SPAN or worse DIV as the top level qualifier
in a scss file.  Start the scss file with an element with a specific
class name or id name.

Jira ticket: CAMS-280

--- a/user-interface/src/case-detail/panels/CaseDetailAssociatedCases.scss
+++ b/user-interface/src/case-detail/panels/CaseDetailAssociatedCases.scss
@@ -1,10 +1,12 @@
-table {
-  width: 100%;
-  th.title-column {
-    width: 40%;
+.associated-cases {
+  table {
+    width: 100%;
+    th.title-column {
+      width: 40%;
+    }
+    td.title-column {
+      white-space: normal;
+    }
+    white-space: nowrap;
   }
-  td.title-column {
-    white-space: normal;
-  }
-  white-space: nowrap;
 }
